Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/Ambig3.out
Ambig3.java:14:14: compiler.err.name.clash.same.erasure: check(E), check(T)
Ambig3.java:20:1: compiler.err.concrete.inheritance.conflict: check(E), Test<java.lang.String,java.lang.String>, check(T), Test<java.lang.String,java.lang.String>, Test<java.lang.String,java.lang.String>
2 errors
